--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.defer-datasource-initialization=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
 
